# ferrous-llm

./: .env.example  .gitignore  .rooignore  .roorules  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
.roo/: mcp.json
crates/ferrous-llm-anthropic/: Cargo.toml  README.md
crates/ferrous-llm-anthropic/src/: config.rs  error.rs  lib.rs  provider.rs  types.rs
crates/ferrous-llm-anthropic/tests/: integration_tests.rs
crates/ferrous-llm-core/: Cargo.toml  README.md
crates/ferrous-llm-core/src/: config.rs  lib.rs  types.rs  util.rs
crates/ferrous-llm-core/tests/: integration_tests.rs
crates/ferrous-llm-grpc/: .gitignore  Cargo.toml  README.md  build.rs
crates/ferrous-llm-grpc/proto/: chat.proto
crates/ferrous-llm-grpc/src/: config.rs  error.rs  lib.rs  provider.rs  types.rs
crates/ferrous-llm-memory/: Cargo.toml
crates/ferrous-llm-ollama/: Cargo.toml  README.md
crates/ferrous-llm-ollama/src/: config.rs  error.rs  lib.rs  provider.rs  types.rs
crates/ferrous-llm-ollama/tests/: integration_tests.rs
crates/ferrous-llm-openai/: Cargo.toml  README.md
crates/ferrous-llm-openai/src/: config.rs  error.rs  lib.rs  provider.rs  types.rs
crates/ferrous-llm-openai/tests/: e2e_tests.rs  integration_tests.rs
crates/llm-anthropic/: Cargo.toml
crates/llm-anthropic/src/: config.rs  error.rs  lib.rs  provider.rs  types.rs
crates/llm-anthropic/tests/: integration_tests.rs
crates/llm-core/: Cargo.toml
crates/llm-core/src/: config.rs  error.rs  traits.rs  types.rs
crates/llm-core/tests/: integration_tests.rs
crates/llm-memory/: Cargo.toml
crates/llm-ollama/: Cargo.toml
crates/llm-ollama/src/: config.rs  error.rs  lib.rs  provider.rs  types.rs
crates/llm-ollama/tests/: integration_tests.rs
crates/llm-openai/: Cargo.toml
crates/llm-openai/src/: config.rs  error.rs  lib.rs  provider.rs  types.rs
crates/llm-openai/tests/: e2e_tests.rs  integration_tests.rs
examples/: Cargo.toml  anthropic_chat.rs  anthropic_chat_streaming.rs  ollama_chat.rs  ollama_chat_streaming.rs  openai_chat.rs  openai_chat_streaming.rs  openai_image_base64.rs  openai_image_description.rs  openai_image_dynamic.rs
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
src/: lib.rs
