[package]
name = "ferrous-llm-anthropic"
version = "0.6.0"
description = "Anthropic provider for the LLM library"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[dependencies]
ferrous-llm-core.workspace = true
async-trait = "0.1"
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
url = { workspace = true, features = ["serde"] }

[features]
default = []
e2e-tests = []
dynamic-image = ["ferrous-llm-core/dynamic-image"]
specta = ["ferrous-llm-core/specta"]

[dev-dependencies]
dotenv = "0.15"
tracing-subscriber = "0.3.19"
