[package]
name = "ferrous-llm-core"
version = "0.6.0"
description = "Core LLM library"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
url = { workspace = true, features = ["serde"] }
image = { version = "0.25.6", features = ["jpeg", "png"], optional = true }
base64 = { version = "0.22.1", optional = true }
specta = { version = "2.0.0-rc.22", optional = true, features = [
    "derive",
    "serde",
    "serde_json",
    "chrono",
] }

[features]
dynamic-image = ["image", "base64"]
specta = ["dep:specta"]
