
[package]
name = "ferrous-llm-grpc"
version = "0.1.0"
description = "Core gRPC implementation"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
chrono = { workspace = true, features = ["serde"] }
futures.workspace = true
prost-types = "0.13.1"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic = { version = "0.13.1", features = ["tls-native-roots", "channel"] }
prost = "0.13.1"
url = { workspace = true, features = ["serde"] }
ferrous-llm-core = { workspace = true, features = ["dynamic-image"] }

[build-dependencies]
tonic-build = "0.13.1"
